--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -67,4 +67,16 @@
         android:layout_toEndOf="@+id/ivItem"
         android:text="name" />
 
+    <Button
+        android:id="@+id/btnItemComment"
+        android:layout_width="147dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvRating"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="259dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="5dp"
+        android:text="comment" />
+
 </RelativeLayout>
